# legal-ai

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
assets/prompts/: evidence-gap-analysis.v1.md  listing-claim-review.v1.md  market-compliance-eu-us.v1.md  product-intake.v1.md  report-drafting.v1.md
assets/rule-packs/: amazon-policy-basic.yaml  eu-gpsr-basic.yaml  us-ftc-claims-basic.yaml
assets/workspace-template/: README.md  listing.md  product.yaml
assets/workspace-template/.legal-ai/: config.yaml
skills/evidence-gap-analysis/: SKILL.md
skills/legal-compliance-hub/: SKILL.md
skills/listing-claim-review/: SKILL.md
skills/market-compliance-eu-us/: SKILL.md
skills/product-intake/: SKILL.md
skills/report-builder/: SKILL.md
src/legal_ai/: __init__.py  audit.py  cli.py  config.py  hashutil.py  models.py  workspace.py
src/legal_ai/commands/: check.py  errors.py  evidence.py  init.py  listing.py  report.py
src/legal_ai/llm/: __init__.py  client.py  prompts.py  schemas.py
src/legal_ai/rules/: __init__.py  guardrails.py  loader.py  schema.py
src/legal_ai/skills/: __init__.py  evidence_gap.py  listing_claim_review.py  market_compliance.py  pdf_report.py  product_intake.py  report_builder.py
src/legal_ai/templates/: expert-review-pack.md.j2  listing-redline.md.j2  risk-report.md.j2  supplier-email.md.j2
